--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AlarmClock</title>
-    <link rel="stylesheet" href="./AlarmClock.css">
+    <link rel="stylesheet" href="./index.css">
     <script src="./jqury/jquery.min.js"></script>    
 </head>
 <body bgcolor="#3D0878">
@@ -229,6 +229,6 @@
             </div>  
         </div>
         <!-- </center> -->
-      <script src="./AlarmClock.js"></script>
+      <script src="./index.js"></script>
 </body>
 </html>
